--- a/styles/create-point.css
+++ b/styles/create-point.css
@@ -89,16 +89,17 @@ form button{
 form button:hover{
     background-color: #2fb86e;
 }
-.itens-grid{
+.items-grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 16px;
 
 }
-.itens-grid li {
+.items-grid li {
     background-color: #f5f5f5;
     list-style: none;
     border: 2px solid #f0f0f5;
+    border-radius: 8px;
     height: 180px;
     padding: 32px 24px 16px;
     display: flex;
@@ -108,17 +109,17 @@ form button:hover{
     text-align: center;
     cursor: pointer;
 }
-.itens-grid li span{
+.items-grid li span{
     flex: 1;
     display: flex;
     align-items: center;
     color: var(--title-color);
 }
-.itens-grid li.selected {
+.items-grid li.selected {
     background: #e1faec;
     border: 2px solid #34cb79;
 }
-.itens-grid li img,
-.itens-grid li span{
+.items-grid li img,
+.items-grid li span{
     pointer-events: none;
 }
