--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -15,6 +15,12 @@
     #page-home main{
         align-items: center;
     }
+    #page-searh-results .cards {
+        grid-template-columns: 1fr ;
+    }
+    #page-searh-results .cards img{
+        height: 250px;
+    }
 }
 
 @media(min-width: 1700px){
