--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -19,42 +19,44 @@
             <legend>
                 <h2>Dados da entidade</h2>
             </legend>
-            <div class="field-group">
-                <div class="field">
-                    <label for="name">Nome da Entidade</label>
-                    <input type="text" name="name" required>
-                </div>
-                <div class="field">
-                    <label for="name">Imagem da entidade</label>
-                    <input type="url" name="image" placeholder="http://" required>
-                </div>
-            </div>
-            <div class="field-group">
-                <div class="field">
-                    <label for="address">Endereço</label>
-                    <input type="text" name="address" required>
-                </div>
-                <div class="field">
-                    <label for="address">Número/Complemento</label>
-                    <input type="text" name="address" required>
-                </div>
-            </div>
-            <div class="field-group">
-                <div class="field">
-                    <label for="state">Estado</label>
-                    <select name="uf" required>
-                        <option value="">Selecione o Estado</option>
-                    </select>
-                    <input type="hidden" name="state">
-                </div>
-                <div class="field">
-                    <label for="city">Cidade</label>
-                    <select name="city" disabled="disabled" required>
-                        <option value="">Selecione a Cidade</option>
-                    </select>
-                    <input type="hidden" name="city">
-                </div>
+                    <div class="field-group">
+                        <div class="field">
+                            <label for="name">Nome da Entidade</label>
+                            <input type="text" name="name" required>
+                        </div>
+                        <div class="field">
+                            <label for="name">Imagem da entidade</label>
+                            <input type="url" name="image" placeholder="http://" required>
+                        </div>
+                    </div>
+                    <div class="field-group">
+                        <div class="field">
+                            <label for="address">Endereço</label>
+                            <input type="text" name="address" required>
+                        </div>
+                        <div class="field">
+                            <label for="address2">Número/Complemento</label>
+                            <input type="text" name="address2" required>
+                        </div>
+                    </div>
+                    <div class="field-group">
+                        <div class="field">
+                            <label for="state">Estado</label>
+                            <select name="uf" required>
+                                <option value="">Selecione o Estado</option>
+                            </select>
+                            <input type="hidden" name="state">
+                        </div>
+                        <div class="field">
+                            <label for="city">Cidade</label>
+                            <select name="city" disabled required>
+                                <option value="">Selecione a Cidade</option>
+                            </select>
+                            <input type="hidden" name="city">
+                        </div>
+                    </div>
 
+                        
             </fieldset>
 
             <fieldset>
@@ -88,9 +90,9 @@
                         <img src="assets/oleo.svg" alt="Óleo de Cozinha">
                         <span>Óleo de Cozinha</span>
                     </li>
-
+                    <input type="hidden" name="items">
                 </div>
-                <input type="hidden" name="items">
+                
 
             </fieldset>
             <button type="submit">Cadastrar ponto de coleta</button>
