--- a/public/styles/create-point.css
+++ b/public/styles/create-point.css
@@ -79,7 +79,7 @@ form label{
     font-size: 14px;
     margin-bottom: 8px;
 }
-form .field-gruop   .field +.field{
+form .field-group   .field +.field{
     margin-left: 24px;
 }
 form button{
