--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -104,7 +104,7 @@
 
     {% block modal %}
         {% if saved %}
-          {%include "/partials/point-create.html" %}
+          {%include "partials/point-create.html" %}
         {% endif %}
     {% endblock modal %}
 
