--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -36,7 +36,7 @@
                             <input type="text" name="address" required>
                         </div>
                         <div class="field">
-                            <label for="address2">Número/Complemento</label>
+                            <label for="address2">Bairro</label>
                             <input type="text" name="address2" required>
                         </div>
                     </div>
@@ -49,11 +49,11 @@
                             <input type="hidden" name="state">
                         </div>
                         <div class="field">
-                            <label for="ufValue">Cidade</label>
+                            <label for="city">Cidade</label>
                             <select name="city" disabled required>
                                 <option value="">Selecione a Cidade</option>
                             </select>
-                            <input type="hidden" name="ufValue">
+                            {#<input type="hidden" name="ufValue">#}
                         </div>
                     </div>
 
