--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -23,18 +23,17 @@
             <div class="cards">
 
 
-                {% for place in places %}
+                {% for place in places2 %}
                 <div class="card">
                         <img src="{{ place.image }}" alt="{{ place.name }}">
                         <h1>{{ place.name }}</h1>
                         <h3>{{ place.items }}</h3>
                         <p>
-                            {{ place.city }}, {{ place.state }} 
-                            <br/>
                             {{ place.address }},
+                            <br/>
+                            {{ place.address2 }}
                              <br/>
-                             {{ place.address2 }}
-                            
+                            {{ place.city }}, {{ place.state }} 
                                                    
                             
                         </p>
